@@ -2,6 +2,9 @@ CHANGES
 -------
 Version 0.10 : In Progress
 --------------------------
+04/29/2018 Curio now properly allows async context managers to be defined using
+           context.asynccontextmanager.  Issue #247.
+
 04/29/2018 Removed the cancel_remaining keyword argument from TaskGroup.next_done()
 
 04/28/2018 Added new "object" wait mode to TaskGroup.  It waits for the
